--- a/src/app/clothes/clothes.component.html
+++ b/src/app/clothes/clothes.component.html
@@ -15,7 +15,7 @@
     <div class="card-body ">
       <h5 class="card-title ">GloryBoys</h5>
       <!-- <p class="card-text">Some.</p> -->
-      <a href="#" id="btnComprar" class="btn btn-light ">Buy</a>
+      <a href="#" id="btnC" class="btn btn-light ">Buy</a>
     </div>
   </div>
  
