--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -16,9 +16,9 @@
 </ul>
  -->
  <nav class="nav nav-pills nav-justified flex-column text-uppercase">
-    <a class="nav-item nav-link active" href="#">Active</a>
-    <a class="nav-item nav-link" href="#">Link</a>
-    <a class="nav-item nav-link" href="#">Link</a>
+    <a class="nav-item nav-link active" href="#">1</a>
+    <a class="nav-item nav-link" href="#">2</a>
+    <a class="nav-item nav-link" href="#">3</a>
     <a class="nav-item nav-link disabled" href="#">Disabled</a>
   </nav>
 
