--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -1,14 +1,14 @@
 <ul class="nav justify-content-center text-uppercase">
   <li class="nav-item ">
-    <a class="nav-link active" href="http://localhost:4200/">Active</a>
+    <a class="nav-link active" href="http://localhost:4200/">NOVEDADES</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">OPORTUNIDADES</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">COLECCIONES</a>
   </li>
-  <li class="nav-item">
+  <!-- <li class="nav-item">
     <a class="nav-link disabled" href="#">Disabled</a>
-  </li>
+  </li> -->
 </ul>
