--- a/src/app/clothes/clothes.component.html
+++ b/src/app/clothes/clothes.component.html
@@ -1,42 +1,17 @@
 
- <div class="container">
-<div class="row justify-content-md-center">
-  <div class= "card text-center p-1 mb-1 bg-dark text-warning" style="width: 16rem;">
-    <img class="card-img-top" src="assets/imgClothes/gloryboys-0602-1-92500820b5d79ba7fc17000782192917-640-0.webp" alt="Card image cap">
-    <div class="card-body ">
-      <h5 class="card-title ">GloryBoys</h5>
-      <!-- <p class="card-text">Some.</p> -->
-      <a href="#" class="btn btn-light ">Buy</a>
+<div class="container">
+  <div class="row justify-content-center d-flex flex-row">
+    <div *ngFor="let ropa of clothesList" class="card text-center p-1 mb-1 bg-dark" style="width: 16rem;">
+      <img class="card-img-top" [src]="ropa.image" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{ ropa.name }}</h5>
+        <p class="card-text">{{ ropa.size }}</p>
+        <p class="card-text">${{ ropa.price }}</p>
+        <p class="card-text">{{ ropa.available ? 'Available' : 'Out of stock' }}</p>
+        <a href="#" class="btn btn-warning">Buy</a>
+      </div>
     </div>
   </div>
- 
-  <div class= "card text-center p-1 mb-1 bg-dark text-danger" style="width: 16rem;">
-    <img class="card-img-top" src="assets/imgClothes/gloryboys-0609-d8d73545c95b57353417000807757037-640-0.webp" alt="Card image cap">
-    <div class="card-body ">
-      <h5 class="card-title ">GloryBoys</h5>
-      <!-- <p class="card-text">Some.</p> -->
-      <a href="#" id="btnC" class="btn btn-light ">Buy</a>
-    </div>
-  </div>
- 
-  <div class= "card text-center p-1 mb-1 bg-dark text-danger" style="width: 16rem;">
-    <img class="card-img-top " src="assets/imgClothes/productos_mesa-de-trabajo-1-copia-31-cdf1155bfb754c29d016909991802075-640-0.webp" alt="Card image cap">
-    <div class="card-body ">
-      <h5 class="card-title ">CowBoys</h5>
-      <!-- <p class="card-text">Some.</p> -->
-      <a href="#" class="btn btn-light ">Buy</a>
-    </div>
-  </div>
- 
-  <div class= "card text-center p-1 mb-1 bg-dark text-danger" style="width: 16rem;">
-    <img class="card-img-top" src="assets/imgClothes/productos_mesa-de-trabajo-1-copia-131-ae3f4c47ea21c2a1b116910013909312-640-0.webp" alt="Card image cap">
-    <div class="card-body ">
-      <h5 class="card-title ">CowBoys</h5>
-      <!-- <p class="card-text">Some.</p> -->
-      <a href="#" class="btn btn-light ">Buy</a>
-    </div>
-  </div>
-</div>
 </div>
 
 
