--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,7 +26,7 @@
 .navbarDiv{
     grid-area: navbarDiv;
     background: rgb(126, 7, 7);
-    background: linear-gradient(90deg, rgb(132, 17, 17) 50%, rgb(108, 20, 20) 100%);    padding: 10vh;
+    background: linear-gradient(90deg, rgb(191, 25, 25) 50%, rgb(108, 20, 20) 100%); padding: 10vh;
     
   }
 
@@ -34,9 +34,9 @@
 .clothesDiv{
     grid-area: clothesDiv;
    padding: 10px;
-   height: 110vh;
+   height: 144vh;
    max-height: max-content;
    background: rgb(156,76,51);
-background: linear-gradient(0deg, rgba(156,76,51,1) 0%, rgba(214,142,59,1) 100%);
+background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 100%);
 }
 
