--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,9 @@
       "navbarDiv clothesDiv clothesDiv"
       "navbarDiv clothesDiv clothesDiv"; 
       padding-bottom: 34vh;
+      background-image: url("../assets/imgClothes/giphy.gif");
+  background-size: cover;
+  background-position: center;
   }
 
 
@@ -38,5 +41,6 @@
    max-height: max-content;
    background: rgb(156,76,51);
 background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 100%);
+
 }
 
