--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <div class="bg-dark">
-
-<section id="gridContainer">
-
-
+ 
+<div id="gridContainer">
     <div class="toolbarDiv"> 
-        <app-tool-bar class="toolbar"></app-tool-bar>
+        <img src="../logoimansur.ico" alt="Logo de la tienda" class="logo">
+
+        <app-tool-bar class="toolbar">
+            <title class=""></title>
+        </app-tool-bar>
     </div>
 
     <div class="navbarDiv">
@@ -15,7 +17,7 @@
         <app-clothes class="clothes"></app-clothes>
     </div>
 
-</section>
+</div>
 
 </div>
 
