--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,46 +1,53 @@
-
-
 #gridContainer{
     display: grid; 
-    grid-template-columns: 0.5fr 1.5fr 1fr; 
-    grid-template-rows: 0.1fr 1.9fr 1fr;  
+    grid-template-columns: 0.4fr 1.6fr 1fr; 
+    grid-template-rows: 0.1fr 2fr 1fr; 
     gap: 5px 10px; 
     grid-template-areas: 
       "toolbarDiv toolbarDiv toolbarDiv"
       "navbarDiv clothesDiv clothesDiv"
       "navbarDiv clothesDiv clothesDiv"; 
-      padding-bottom: 34vh;
-      background-image: url("../assets/imgClothes/giphy.gif");
-  background-size: cover;
-  background-position: center;
+      background-image: url("../assets/imgClothes/background1.gif");
+      background-size:auto;
+      background-position: center;    
   }
 
-
-.toolbarDiv{
+  
+  .toolbarDiv {
     grid-area: toolbarDiv;
     width: 100%;
     height: 10vh;
     padding-top: 3vh;
-    background-color: #000000;
-
+    background-color: #e1e1e1;
+    border-radius: 2vh;
   }
 
+  .logo {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 1.5vh; /* Ajustar la distancia desde la parte superior con vh */
+    left: 5%; /* Ajustar la distancia desde la izquierda con porcentaje */
+    width: 5%; /* Ajustar el ancho del logo con porcentaje */
+    z-index: 999;
+  }
 
 .navbarDiv{
     grid-area: navbarDiv;
-    background: rgb(126, 7, 7);
-    background: linear-gradient(90deg, rgb(191, 25, 25) 50%, rgb(108, 20, 20) 100%); padding: 10vh;
-    
+    background: rgba(126, 7, 7, 0.26);
+    background: linear-gradient(90deg, rgb(211, 211, 211) 50%, rgb(75, 75, 75) 100%); padding: 10vh;
+    border-radius: 30px;
   }
 
 
 .clothesDiv{
     grid-area: clothesDiv;
    padding: 10px;
-   height: 144vh;
+   height: auto;
    max-height: max-content;
    background: rgb(156,76,51);
-background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 100%);
+background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 131, 69, 0) 100%);
+border-radius: 50px;
 
 }
 
