--- a/src/app/clothes/clothes.component.html
+++ b/src/app/clothes/clothes.component.html
@@ -8,7 +8,7 @@
         <p class="card-text">{{ ropa.size }}</p>
         <p class="card-text">${{ ropa.price }}</p>
         <p class="card-text">{{ ropa.available ? 'Available' : 'Out of stock' }}</p>
-        <a href="#" class="btn btn-warning">Buy</a>
+        <a href="#" class="btn btn-light">Buy</a>
       </div>
     </div>
   </div>
