--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,23 @@
+
 <div class="bg-dark">
  
 <div id="gridContainer">
+
+
     <div class="toolbarDiv"> 
         <img src="../logoimansur.ico" alt="Logo de la tienda" class="logo">
+
 
         <app-tool-bar class="toolbar">
             <title class=""></title>
         </app-tool-bar>
     </div>
 
+
     <div class="navbarDiv">
         <app-nav-bar class="navbar"></app-nav-bar>
     </div>
+
 
     <div class="clothesDiv">
         <app-clothes class="clothes"></app-clothes>
@@ -21,3 +27,4 @@
 
 </div>
 
+<app-reactive-forms></app-reactive-forms>
