--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,9 +7,9 @@
       "toolbarDiv toolbarDiv toolbarDiv"
       "navbarDiv clothesDiv clothesDiv"
       "navbarDiv clothesDiv clothesDiv"; 
-      background-image: url("../assets/imgClothes/background1.gif");
-      background-size:auto;
-      background-position: center;    
+      background-image: url("../assets/imgClothes/asdasd1.gif");
+      background-size:cover;
+      background-position:center;    
   }
 
   
@@ -18,7 +18,7 @@
     width: 100%;
     height: 10vh;
     padding-top: 3vh;
-    background-color: #e1e1e1;
+    background-color: #e1e1e1ec;
     border-radius: 2vh;
   }
 
@@ -35,7 +35,7 @@
 .navbarDiv{
     grid-area: navbarDiv;
     background: rgba(126, 7, 7, 0.26);
-    background: linear-gradient(90deg, rgb(211, 211, 211) 50%, rgb(75, 75, 75) 100%); padding: 10vh;
+    background: linear-gradient(90deg, rgba(211, 211, 211, 0.937) 50%, rgba(75, 75, 75, 0.88) 100%); padding: 10vh;
     border-radius: 30px;
   }
 
