--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -9,7 +9,10 @@
   <li class="nav-item">
     <a class="nav-link" href="#">COLECCIONES</a>
   </li>
-
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+    Iniciar Sesión
+  </button>
+  
   <!-- <li class="nav-item">
     <a class="nav-link disabled" href="#">Disabled</a>
   </li> -->
